--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1858,12 +1858,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unemployment P-value: 0.00000\n",
+      "CPI P-value: 0.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can see from this plot that fuel price have little to no effect on the weekly_sales, and week corr with unemployment and cpi\n",
+    "# Now we can see the p-value also for the cpi and unemployment if p-value >= 0.05 then it's not signficant and we can neglect it in the analysis\n",
+    "from scipy.stats import pearsonr\n",
+    "unemp_corr, unemp_p_value = pearsonr(df['Unemployment'], df['Weekly_Sales'])\n",
+    "print(f\"Unemployment P-value: {unemp_p_value:.5f}\")\n",
+    "\n",
+    "cpi_corr, cpi_p_value = pearsonr(df['CPI'], df['Weekly_Sales'])\n",
+    "print(f\"CPI P-value: {cpi_p_value:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can see from this plot that fuel price have little to no effect on the weekly_sales, and week corr with unemployment and cpi\n",
-    "# Now we can just go for data preprocessing"
+    "# So unemployment and CPI is significant\n",
+    "# Now we can just start doing preprocessing"
    ]
   }
  ],
